# semantic-claw-router

./: .dockerignore  .gitignore  CLAUDE.md  Containerfile  README.md  pyproject.toml  research.md  skills.md
docs/: api-reference.md  architecture.md  benchmarks.md  configuration.md  contributing.md  getting-started.md  pipeline.md
examples/: comparative_test.py  config.yaml  run_example.py  semantic_proof.py
manifests/: comparative-test-job.yaml  semantic-proof-job.yaml
src/semantic_claw_router/: __init__.py  cli.py  config.py  server.py
src/semantic_claw_router/observability/: __init__.py  logging.py  metrics.py
src/semantic_claw_router/pipeline/: __init__.py  compress.py  dedup.py  session.py
src/semantic_claw_router/providers/: __init__.py  base.py  gemini.py  vllm.py
src/semantic_claw_router/router/: __init__.py  decision.py  fastpath.py  semantic.py  types.py
tests/: test_compress.py  test_config.py  test_decision.py  test_dedup.py  test_fastpath.py  test_integration.py  test_semantic.py  test_session.py
